# course_work5

./: .gitignore  README.md  main.py  pyproject.toml
src/: DBManager.py  config.py  constants.py  hh_parser.py
