[tool.poetry]
name = "course-work5"
version = "0.1.0"
description = ""
authors = ["yura_filchakov <filchakov1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"
dbmanager = "^0.1.3"
values = "^2020.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
